--- a/src/app/components/edit/edit.component.css
+++ b/src/app/components/edit/edit.component.css
@@ -4,4 +4,6 @@ btn-group-vertical{
 
 button {
   width: fit-content;
+  margin: 0;
+  padding: 0;
 }
